deploy/retrieveUnpackaged/objects/SFDC_Script_Result__c.object
<CustomObject>
    <description>Stored detailed question-answer results for a given call script occurrence</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>The answer to the question.</description>
        <label>Answer</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01550000000VdV0&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The question asked.</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The score for the given answer.</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Script_Result__c</fullName>
        <description>The script result (high level) object the detail results pertain to.</description>
        <label>Script Result</label>
        <referenceTo>SFDC_Script_Header__c</referenceTo>
        <relationshipLabel>Script Results</relationshipLabel>
        <relationshipName>R00N50000001nTwbEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Script Result</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>